--- a/css/agency.css
+++ b/css/agency.css
@@ -177,7 +177,7 @@ fieldset[disabled] .btn-primary.active {
     color: #ff6b46;
    position: absolute;
     
- margin-left: -205px;
+ margin-left: -270px;
     top: -20px;
 	margin-top: 500px;
 
@@ -517,7 +517,7 @@ header .intro-text .intro-heading {
        
         position:absolute;
         margin-top: 70px;
-        margin-left:457px;
+        margin-left:500px;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 120%;
          line-height: 55px;
@@ -528,6 +528,7 @@ header .intro-text .intro-heading {
     header .intro-text .intro-heading {
         padding-bottom: 80px;
          margin-top: -30px;
+         margin-left:260px;
         text-transform: uppercase;
        font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 410%;
@@ -1155,6 +1156,7 @@ footer ul.quicklinks {
 
 ul.social-buttons {
     margin-bottom: 0;
+    margin-top: 25px;
 }
 
 ul.social-buttons li a {
